# FlowFund

./: .gitignore
backend/: package-lock.json  package.json
backend/src/: index.js
backend/src/config/: database.js  index.js
backend/src/controllers/: approvalController.js  approvalRuleController.js  approvalSequenceController.js  authController.js  categoryController.js  companyController.js  currencyController.js  expenseController.js  userController.js
backend/src/middleware/: auth.js  errorHandler.js
backend/src/models/: ApprovalRequest.js  ApprovalRule.js  ApprovalSequence.js  ApprovalSequenceStep.js  Company.js  CurrencyRate.js  Expense.js  ExpenseAuditLog.js  ExpenseCategory.js  User.js  index.js
backend/src/routes/: approvalRules.js  approvalSequences.js  approvals.js  auth.js  categories.js  company.js  currencies.js  expenses.js  index.js  users.js
backend/src/services/: approvalRuleService.js  approvalSequenceService.js  approvalService.js  authService.js  categoryService.js  companyService.js  currencyService.js  expenseService.js  userService.js
backend/src/validators/: index.js
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: Layout.jsx
frontend/src/context/: AuthContext.jsx
frontend/src/pages/: ApprovalRules.jsx  ApprovalSequences.jsx  Approvals.jsx  Categories.jsx  Dashboard.jsx  Expenses.jsx  Login.jsx  Settings.jsx  Signup.jsx  SubmitExpense.jsx  Users.jsx
frontend/src/services/: api.js
receiptScanner/: main.py  pyproject.toml
